index and navigation improvements

--- a/Historian/templates/point.html
+++ b/Historian/templates/point.html
@@ -4,6 +4,10 @@
 </head>
 <body>
     <h2>{{name}}</h2>
+    <ul>
+        <li><a href="../">back to list</a></li>
+        <li><a href="../point_values/{{name}}">values</a></li>
+    </ul>
     <h3>{{message}}</h3>
     <form method="post" action="?">
         <table>
