chart width 800px - now on highcharts conf, not directly on div style.

--- a/Historian/templates/point_values.html
+++ b/Historian/templates/point_values.html
@@ -9,6 +9,9 @@
 			$.getJSON(jsonURL)
 				.done(function(data) {
 					$(containerName).highcharts({
+						chart: {
+							width: 800
+						},
 						title: {
 							text: null
 						},
