units field added to point ORM model

--- a/Historian/templates/point_values.html
+++ b/Historian/templates/point_values.html
@@ -46,7 +46,7 @@
 					<tbody>
                         {% for point_name in points %}
 						<tr>
-							<td><a href="#">{{point_name}}</a></td>
+							<td><a href="point/{{point_name}}">{{point_name}}</a></td>
 							<td><input type="checkbox" id="cb{{point_name}}" checked/></td>
 							<td>20&deg;C</td>
 							<td>10:00 18-Dec-14</td>
