--- a/Historian/templates/point.html
+++ b/Historian/templates/point.html
@@ -5,8 +5,7 @@
 <body>
     <h2>{{name}}</h2>
     <ul>
-        <li><a href="../">back to list</a></li>
-        <li><a href="../point_values/{{name}}">values</a></li>
+        <li><a href="../">back</a></li>
     </ul>
     <h3>{{message}}</h3>
     <form method="post" action="?">
@@ -27,6 +26,10 @@
             <tr>
                 <td>Limit Hours:</td>
                 <td><input name="limit_hours" type="text" value="{{limit_hours}}" /></td>
+            </tr>
+            <tr>
+                <td>Units:</td>
+                <td><input name="units" type="text" value="{{units}}" /></td>
             </tr>
         </table>
         <button type="submit">Submit</button>
