--- a/Historian/templates/point_values.html
+++ b/Historian/templates/point_values.html
@@ -147,13 +147,32 @@
 			}
 			function drawChart(jsonURL) {
 				$("#chart_message").hide();
-			
+
 				$.getJSON(jsonURL)
 					.done(function(data) {
+                        // make unique list of units
+                        var units = [];
+                        var yAxis = [];
+                        for(var i = 0; i < data.length; i++) {
+
+                            // get series units
+                            var uom = data[i]["units"];
+
+                            // check if yAxis exists for units
+                            var uom_index = units.indexOf(uom);
+                            if(uom_index == -1) {
+                                // doesn't already exist, create new yAxis
+                                uom_index = units.length;
+                                units[uom_index] = uom;
+                                yAxis[uom_index] = { title: { text: "Values ( " + uom + " )" }};
+                            }
+
+                            // assign series to it's yAxis
+                            data[i]["yAxis"] = uom_index;
+                            data[i]["tooltip"] = { valueSuffix: " " + uom };
+                        }
+
 						$("#chart").highcharts({
-							/*chart: {
-								width: 800
-							},*/
 							title: {
 								text: null
 							},
@@ -169,8 +188,9 @@
 									text: 'Timestamp'
 								}
 							},
+							yAxis: yAxis,
 							series: data
-						})
+						});
 					})
 					.fail(function() {
 						$("#chart_message").html("<strong>Error:</strong> Call to \"" + jsonURL + "\" for chart data, failed.")
