--- a/Historian/templates/point_values.html
+++ b/Historian/templates/point_values.html
@@ -173,6 +173,9 @@
                         }
 
 						$("#chart").highcharts({
+						    chart: {
+						        zoomType: "x"
+						    },
 							title: {
 								text: null
 							},
