--- a/Historian/templates/point_values.html
+++ b/Historian/templates/point_values.html
@@ -11,7 +11,10 @@
 		<div class="container">
 
 			<div class="row header">
-				<h3 class="text-muted">TurtlePi</h3>
+                <ul class="list-inline">
+                    <li><h3 class="text-muted">TurtlePi</h3></li>
+                    <li><a href="cam">Camera</a></li>
+                </ul>
 			</div>
 			
 			<div class="row">
