date selected in date picker, now selectes data up to the end of the day, not the beginning

--- a/Historian/templates/point_values.html
+++ b/Historian/templates/point_values.html
@@ -203,6 +203,7 @@
 				var url;
 				var days = chartTimespan.days;
 				var from = chartTimespan.from;
+				from.setDate(from.getDate() + 1);
 				if(days > 0) {
 					url = makeTurtlePiURL(from, days);
 				} else {
